log
Wed 19 Apr 2023 09:58:26 PM UTC: 
 tests:  1|8
total_score: 0/70
ea55fce
Wed 19 Apr 2023 09:59:59 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
fbcfd92
Wed 19 Apr 2023 10:33:02 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
c0c62fb
Wed 19 Apr 2023 10:33:16 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
dbf82c0
Wed 19 Apr 2023 10:33:27 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|7
total_score: 5/70
8ccfac2
Wed 19 Apr 2023 10:33:50 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
c8e922c
Wed 19 Apr 2023 10:33:57 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
f30f99e
Thu 20 Apr 2023 12:42:22 AM UTC: 
 treemap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:88:29: error: ‘map’ undeclared (first use in this function)
   88 |         int resultadoComp = map->lower_than(current->pair->key,key);
      |                             ^~~
treemap.c:88:29: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e1f1197
